@@ -5,3 +5,5 @@ db.sqlite
 dist/
 docs/build/
 *coverage/
+.coverage
+.tox
