@@ -1,19 +1,18 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load url from future %}
 
 {% block title %}{% trans "FAQ" %}{% endblock %}
 
 {% block main %}
-<h1>{% trans "FAQ" %}</h1>
-<a href="{% url "frequently_submit_question" %}">{% trans "You can't find an answer to your issue? Submit your own! We'll help you out." %}</a>
-<div>
-{% for category in object_list %}
-    {% include "frequently/partials/category.html" %}
-{% endfor %}
-</div>
+  <h1>{% trans "FAQ" %}</h1>
+  <a href="{% url "frequently_submit_question" %}">{% trans "You can't find an answer to your issue? Submit your own! We'll help you out." %}</a>
+   <div>
+     {% for category in object_list %}
+       {% include "frequently/partials/category.html" %}
+     {% endfor %}
+   </div>
 {% endblock %}
 
 {% block extrajs %}
-<script src="{{ STATIC_URL }}frequently/js/frequently.js"></script>
+  <script src="{{ STATIC_URL }}frequently/js/frequently.js"></script>
 {% endblock %}
