@@ -1,12 +1,11 @@
 {% load i18n %}
-{% load url from future %}
 <div data-answer-id="{{ entry.pk }}">
-    <p>{% trans "Rating" %}: <span data-id="rating-id{{ entry.pk }}">{{ entry.rating }}</span></p>
-    <p>{{ entry.answer|safe }}</p>
-    {% if not entry.pk in rated_entries or feedback_entry == entry.pk %}
-        {% include "frequently/partials/feedback.html" with object=entry %}
-    {% else %}
-        <p><em>{% trans "You've already rated this entry." %}</em></p>
-    {% endif %}
-    <a onclick="hideAnswer('{{ entry.pk }}'); return false;" href="{% url "frequently_list" %}">{% trans "Hide answer" %}</a>
+  <p>{% trans "Rating" %}: <span data-id="rating-id{{ entry.pk }}">{{ entry.rating }}</span></p>
+  <p>{{ entry.answer|safe }}</p>
+  {% if not entry.pk in rated_entries or feedback_entry == entry.pk %}
+    {% include "frequently/partials/feedback.html" with object=entry %}
+  {% else %}
+    <p><em>{% trans "You've already rated this entry." %}</em></p>
+  {% endif %}
+  <a onclick="hideAnswer('{{ entry.pk }}'); return false;" href="{% url "frequently_list" %}">{% trans "Hide answer" %}</a>
 </div>
