@@ -1,9 +1,7 @@
 {% load i18n %}
-{% load url from future %}
-
 <a href="{% url "frequently_submit_question" %}">{% trans "You can't find an answer to your issue? Submit your own! We'll help you out." %}</a>
 <div>
-{% for category in categories %}
+  {% for category in categories %}
     {% include "frequently/partials/category.html" %}
-{% endfor %}
+  {% endfor %}
 </div>
