@@ -11,18 +11,18 @@ class EntryCategoryTestCase(TestCase):
     """Tests for the ``EntryCategory`` model class."""
     def test_model(self):
         obj = mixer.blend('frequently.EntryCategory')
-        self.assertTrue(obj.pk)
+        self.assertTrue(str(obj))
 
 
 class EntryTestCase(TestCase):
     """Tests for the ``Entry`` model class."""
     def test_model(self):
         obj = mixer.blend('frequently.Entry')
-        self.assertTrue(obj.pk)
+        self.assertTrue(str(obj))
 
 
 class FeedbackTestCase(TestCase):
     """Tests for the ``Feedback`` model class."""
     def test_model(self):
         obj = mixer.blend('frequently.Feedback')
-        self.assertTrue(obj.pk)
+        self.assertTrue(str(obj))
