@@ -1,0 +1,3 @@
+django
+django-libs
+django-ckeditor
