@@ -1,5 +1,7 @@
 === ongoing ===
 
+- Prepared app for Django 1.9 and Python 3.5
+
 == 1.4.1 ===
 
 - added ckeditor to answer field
